--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,11 +1,9 @@
-apply plugin: "java"
-
-sourceCompatibility = 11
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+eclipse.project.name = appName + '-core'
 
-sourceSets.main.java.srcDirs = [ "src/" ]
-
-
-eclipse.project {
-    name = appName + "-core"
+dependencies {
+  compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+  compile "com.github.czyzby:gdx-lml:$lmlVersion"
+  compile "com.github.czyzby:gdx-kiwi:$kiwiVersion"
+  compile "com.strongjoshua:libgdx-inGameConsole:$inGameConsoleVersion"
 }
