--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xms128m -Xmx1500m
-org.gradle.configureondemand=false
+org.gradle.jvmargs=-Xms128m -Xmx512m
+org.gradle.configureondemand=true
+lmlVersion=1.9.1.9.6
+kiwiVersion=1.9.1.9.6
+inGameConsoleVersion=0.5.2
+gdxVersion=1.9.6
