--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'application'
 
 sourceSets.main.resources.srcDirs += [ rootProject.file('assets').absolutePath ]
-mainClassName = 'uk.me.mattgill.gdx.lwjgl3.Lwjgl3Launcher'
+mainClassName = 'uk.aston.dc2060.lwjgl3.Lwjgl3Launcher'
 eclipse.project.name = appName + '-lwjgl3'
 sourceCompatibility = 1.8
 
